--- a/assists-opcv/build.gradle
+++ b/assists-opcv/build.gradle
@@ -37,15 +37,19 @@ dependencies {
     implementation project(':assists-mp')
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                groupId = 'com.github.ven-coder'
-                artifactId = 'assists-opcv'
-                version = rootProject.ext.mavenVersion
-            }
-        }
-    }
-}
+//afterEvaluate {
+//    publishing {
+//        publications {
+//            release(MavenPublication) {
+//                from components.release
+//                groupId = 'com.github.ven-coder'
+//                artifactId = 'assists-opcv'
+//                version = rootProject.ext.mavenVersion
+//            }
+//        }
+//    }
+//}
+
+//aar打包
+//apply from: 'aliyun-maven-push.gradle'
+apply from: 'aliyun-maven-push_gradle7.gradle'
