--- a/assists-web/build.gradle
+++ b/assists-web/build.gradle
@@ -38,15 +38,19 @@ dependencies {
     implementation project(':assists-mp')
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                groupId = 'com.github.ven-coder'
-                artifactId = 'assists-web'
-                version = '0.0.1-SNAPSHOT'
-            }
-        }
-    }
-}
+//afterEvaluate {
+//    publishing {
+//        publications {
+//            release(MavenPublication) {
+//                from components.release
+//                groupId = 'com.github.ven-coder'
+//                artifactId = 'assists-web'
+//                version = '0.0.1-SNAPSHOT'
+//            }
+//        }
+//    }
+//}
+
+//aar打包
+//apply from: 'aliyun-maven-push.gradle'
+apply from: 'aliyun-maven-push_gradle7.gradle'
